Adjusted focus input border color for all themes.

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -108,6 +108,12 @@ $maganese-blue-level-7: #048f86;
 $maganese-blue-level-8: #04857c;
 // Lake michigan blues
 $lake-michigan-blue-level-1: #5ab2d4;
+$lake-michigan-blue-level-2: #56a9ca;
+$lake-michigan-blue-level-3: #52a1c0;
+$lake-michigan-blue-level-4: #4e9ab8;
+$lake-michigan-blue-level-5: #478da8;
+$lake-michigan-blue-level-6: #4486a0;
+$lake-michigan-blue-level-7: #3f7c94;
 // Old-Copper blues
 $old-copper-blue-level-1: #87b2bd;
 $old-copper-blue-level-2: #7aa2ac;
@@ -366,42 +372,42 @@ $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light: $turkis
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-dark: $peacock-blue-level-5;
 $theme-mode-blue-turkish-new-item-tutorial-border-text-color-light: $cerulean-blue-level-6;
 $theme-mode-blue-turkish-new-item-tutorial-border-text-color-dark: $peacock-blue-level-3;
-$theme-mode-blue-turkish-focus-border-color-light: $peacock-blue-level-4;
-$theme-mode-blue-turkish-focus-border-color-dark: $peacock-blue-level-7;
+$theme-mode-blue-turkish-focus-border-color-light: $peacock-blue-level-3;
+$theme-mode-blue-turkish-focus-border-color-dark: $lake-michigan-blue-level-6;
 $theme-mode-blue-turkish-text-color-light: $peacock-blue-level-5;
 $theme-mode-blue-turkish-text-color-dark: $lake-michigan-blue-level-1;
 $theme-mode-blue-queen-toggle-switch-on-border-background-color-light: $carolina-blue-level-6;
 $theme-mode-blue-queen-toggle-switch-on-border-background-color-dark: $carolina-blue-level-7;
 $theme-mode-blue-queen-new-item-tutorial-border-text-color-light: $imperial-blue-level-5;
 $theme-mode-blue-queen-new-item-tutorial-border-text-color-dark: $imperial-blue-level-1;
-$theme-mode-blue-queen-focus-border-color-light: $imperial-blue-level-4;
-$theme-mode-blue-queen-focus-border-color-dark: $imperial-blue-level-7;
+$theme-mode-blue-queen-focus-border-color-light: $imperial-blue-level-3;
+$theme-mode-blue-queen-focus-border-color-dark: $imperial-blue-level-5;
 $theme-mode-blue-queen-text-color-light: $imperial-blue-level-8;
-$theme-mode-blue-queen-text-color-dark: $imperial-blue-level-3;
+$theme-mode-blue-queen-text-color-dark: $imperial-blue-level-1;
 $theme-mode-blue-sky-toggle-switch-on-border-background-color-light: $sky-blue-level-4;
 $theme-mode-blue-sky-toggle-switch-on-border-background-color-dark: $sky-blue-level-6;
 $theme-mode-blue-sky-new-item-tutorial-border-text-color-light: $sky-blue-level-4;
 $theme-mode-blue-sky-new-item-tutorial-border-text-color-dark: $sky-blue-level-1;
-$theme-mode-blue-sky-focus-border-color-light: $sky-blue-level-4;
-$theme-mode-blue-sky-focus-border-color-dark: $sky-blue-level-10;
+$theme-mode-blue-sky-focus-border-color-light: $sky-blue-level-3;
+$theme-mode-blue-sky-focus-border-color-dark: $sky-blue-level-8;
 $theme-mode-blue-sky-text-color-light: $sky-blue-level-5;
 $theme-mode-blue-sky-text-color-dark: $sky-blue-light-level-2;
 $theme-mode-blue-turquoise-toggle-switch-on-border-background-color-light: $maganese-blue-level-6;
 $theme-mode-blue-turquoise-toggle-switch-on-border-background-color-dark: $maganese-blue-level-8;
 $theme-mode-blue-turquoise-new-item-tutorial-border-text-color-light: $maganese-blue-level-5;
 $theme-mode-blue-turquoise-new-item-tutorial-border-text-color-dark: $maganese-blue-level-1;
-$theme-mode-blue-turquoise-focus-border-color-light: $maganese-blue-level-5;
-$theme-mode-blue-turquoise-focus-border-color-dark: $maganese-blue-level-8;
+$theme-mode-blue-turquoise-focus-border-color-light: $maganese-blue-level-3;
+$theme-mode-blue-turquoise-focus-border-color-dark: $maganese-blue-level-7;
 $theme-mode-blue-turquoise-text-color-light: $maganese-blue-level-8;
-$theme-mode-blue-turquoise-text-color-dark: $maganese-blue-level-3;
+$theme-mode-blue-turquoise-text-color-dark: $maganese-blue-level-2;
 $theme-mode-purple-rain-toggle-switch-on-border-background-color-light: $rain-purple-light-level-4;
 $theme-mode-purple-rain-toggle-switch-on-border-background-color-dark: $rain-purple-level-5;
 $theme-mode-purple-rain-new-item-tutorial-border-text-color-light: $rain-purple-level-1;
 $theme-mode-purple-rain-new-item-tutorial-border-text-color-dark: $candy-purple-level-1;
-$theme-mode-purple-rain-focus-border-color-light: $rain-purple-light-level-4;
-$theme-mode-purple-rain-focus-border-color-dark: $rain-purple-level-2;
+$theme-mode-purple-rain-focus-border-color-light: $rain-purple-light-level-3;
+$theme-mode-purple-rain-focus-border-color-dark: $rain-purple-level-1;
 $theme-mode-purple-rain-text-color-light: $rain-purple-level-3;
-$theme-mode-purple-rain-text-color-dark: $candy-purple-level-1;
+$theme-mode-purple-rain-text-color-dark: $candy-purple-level-2;
 // Theme (default)
 $default-theme-brighter-border-background-color: $theme-brighter-border-background-color-blue-turkish;
 $default-theme-base-border-background-color: $theme-base-border-background-color-blue-turkish;
