Adjusted turkish-blue theme toggle switch color to be more distinct.

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -369,7 +369,7 @@ $theme-brighter-border-background-color-purple-rain: $rain-purple-light-level-4;
 $theme-base-border-background-color-purple-rain: $rain-purple-level-6;
 // Themes + Light/Dark mode
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light: $turkish-blue-level-2;
-$theme-mode-blue-turkish-toggle-switch-on-border-background-color-dark: $peacock-blue-level-5;
+$theme-mode-blue-turkish-toggle-switch-on-border-background-color-dark: $lake-michigan-blue-level-6;
 $theme-mode-blue-turkish-new-item-tutorial-border-text-color-light: $cerulean-blue-level-6;
 $theme-mode-blue-turkish-new-item-tutorial-border-text-color-dark: $peacock-blue-level-3;
 $theme-mode-blue-turkish-focus-border-color-light: $peacock-blue-level-3;
