Removed unneeded important lines from css

--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -52,8 +52,8 @@
 		width: v.$item-view-list-sidebar-width;
 		font-size: v.$base-font-size;
 		font-family: Arial, Helvetica, sans-serif;
-		overflow-y: auto !important;
-		overflow-x: hidden !important;
+		overflow-y: auto;
+		overflow-x: hidden;
 	}
 
 	.list-sidebar--minimized {
