--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -24,8 +24,8 @@
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
-		overflow-y: auto !important;
-		overflow-x: hidden !important;
+		overflow-y: auto;
+		overflow-x: hidden;
 	}
 
 	.settings-button {
