--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -13,8 +13,8 @@
 		width: 100vw;
 		font-size: v.$base-font-size;
 		font-family: Arial, Helvetica, sans-serif;
-		overflow-y: auto !important;
-		overflow-x: auto !important;
+		overflow-y: auto;
+		overflow-x: auto;
 	}
 
 	.item-content-container--shifted-right {
