--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -30,8 +30,8 @@
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
-		overflow-y: auto !important;
-		overflow-x: hidden !important;
+		overflow-y: auto;
+		overflow-x: hidden;
 	}
 
 	.create-item-sidebar--taller {
