--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -12,8 +12,8 @@
 	width: 100%;
 	font-size: v.$base-font-size;
 	font-family: Arial, Helvetica, sans-serif;
-	overflow-y: auto !important;
-	overflow-x: auto !important;
+	overflow-y: auto;
+	overflow-x: auto;
 
 	.list-table,
 	.js-calc-list-table {
@@ -158,6 +158,6 @@
 }
 
 .list-table-component--no-scroll {
-	overflow-y: hidden !important;
-	overflow-x: hidden !important;
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
