Made completed status color a little brighter so it is easier to see in dark mode

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -421,7 +421,7 @@ $status-gray: $gray-level-3;
 $status-blue: #568dd5;
 $status-purple: #9680ce;
 $status-orange: #ff9900;
-$status-green: #007e00;
+$status-green: #008600;
 $status-red: #d14242;
 
 // Components (specific)
