Further documented colorUtils with JsDoc

--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -25,7 +25,7 @@ body {
 	//=================
 	// Light/Dark mode
 	//=================
-	// Light/Dark mode -- Base -- background and text colors
+	// Light/Dark mode -- Base primary -- background and text colors
 	.js-set-base-background-and-text-color-dark-mode-false {
 		background-color: v.$mode-base-background-color-light;
 		color: v.$mode-base-primary-text-color-light;
